--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 data_checkpoints/* filter=lfs diff=lfs merge=lfs -text
+Data/data_checkpoints/*.csv filter=lfs diff=lfs merge=lfs -text
+Data/data_checkpoints/*.pkl filter=lfs diff=lfs merge=lfs -text
